Removed unnecessary floats and added "vertical-align: middle" to buttons, as this also solves this problem.
Carefully tested various buttons to check that they behave the same

--- a/core/app/assets/stylesheets/bubble/learn-more.css.less
+++ b/core/app/assets/stylesheets/bubble/learn-more.css.less
@@ -2,28 +2,23 @@
 @import "bubble/variables";
 
 .factlink-modal-container {
-
   .learn-more {
     padding: 15px;
     background: #f5f5f5;
-    overflow: hidden;
 
-    span {
-      float: left;
-      margin-top: 6px;
+    .button {
+      vertical-align: middle;
     }
 
     .learn-more-btn-sign-in {
       margin-right: 5px;
       color: @linkColor;
-      float: left;
     }
 
     .learn-more-btn-learn-more {
       margin-left: 5px;
       margin-right: 5px;
       color: white;
-      float: left;
     }
   }
 
